--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 					            content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no"/>
 				        <meta name="apple-mobile-web-app-capable" content="yes"/>
 					    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-					        <title>SimpleCalendar.js日历插件</title>
+					        <title>2022</title>
 						<!--    <link rel="stylesheet" type="text/css" href="./stylesheets/stylesheet.css" media="screen">-->
 						<!--    <link rel="stylesheet" type="text/css" href="./stylesheets/print.css" media="print">-->
 						    <link rel="stylesheet" type="text/css" href="./stylesheets/simple-calendar.css?v=1.01">
